--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -126,13 +126,90 @@ entities.Microlith57Misc/RainbowLight.placements.name.rainbowLight=Rainbow Light
 # Color Unpacker
 entities.Microlith57Misc/ColorUnpacker_Float.placements.name.colorUnpacker=Color Unpacker (Counter to Sliders)
 entities.Microlith57Misc/ColorUnpacker_Float.attributes.description.flag=If present, only update the sliders when the flag is set.
-entities.Microlith57Misc/ColorUnpacker_Float.attributes.description.packedColor=Counter containing the packed color data to unpack.\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorUnpacker_Float.attributes.description.packedColor=Counter containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
 entities.Microlith57Misc/ColorUnpacker_Float.attributes.description.unpackedColorPrefix=R, G, B, and A will be appended to this value to get the slider names for the four components of the color.
 
 entities.Microlith57Misc/ColorUnpacker_Float_Expression.placements.name.colorUnpacker=Color Unpacker (Expression to Sliders)
 entities.Microlith57Misc/ColorUnpacker_Float_Expression.attributes.description.expression=If present, only update the sliders when the expression is truthy.
-entities.Microlith57Misc/ColorUnpacker_Float_Expression.attributes.description.packedColor=Expression yielding the packed color data to unpack.\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorUnpacker_Float_Expression.attributes.description.packedColor=Expression yielding the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
 entities.Microlith57Misc/ColorUnpacker_Float_Expression.attributes.description.unpackedColorPrefix=R, G, B, and A will be appended to this value to get the slider names for the four components of the color.
+
+entities.Microlith57Misc/ColorUnpacker_Int.placements.name.colorUnpacker=Color Unpacker (Counter to Counters)
+entities.Microlith57Misc/ColorUnpacker_Int.attributes.description.flag=If present, only update the counters when the flag is set.
+entities.Microlith57Misc/ColorUnpacker_Int.attributes.description.packedColor=Counter containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorUnpacker_Int.attributes.description.unpackedColorPrefix=R, G, B, and A will be appended to this value to get the counter names for the four components of the color.
+
+entities.Microlith57Misc/ColorUnpacker_Int_Expression.placements.name.colorUnpacker=Color Unpacker (Expression to Counters)
+entities.Microlith57Misc/ColorUnpacker_Int_Expression.attributes.description.expression=If present, only update the counters when the expression is truthy.
+entities.Microlith57Misc/ColorUnpacker_Int_Expression.attributes.description.packedColor=Expression yielding the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorUnpacker_Int_Expression.attributes.description.unpackedColorPrefix=R, G, B, and A will be appended to this value to get the counter names for the four components of the color.
+
+entities.Microlith57Misc/ColorUnpacker_HSL.placements.name.colorUnpacker=Color Unpacker (Counter to HSL Sliders)
+entities.Microlith57Misc/ColorUnpacker_HSL.attributes.description.flag=If present, only update the sliders when the flag is set.
+entities.Microlith57Misc/ColorUnpacker_HSL.attributes.description.packedColor=Counter containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorUnpacker_HSL.attributes.description.unpackedColorPrefix=H, S, and L will be appended to this value to get the slider names for the three components of the color. Alpha is ignored.
+entities.Microlith57Misc/ColorUnpacker_HSL.attributes.description.angleFormat=Format to use for the hue component.
+
+entities.Microlith57Misc/ColorUnpacker_HSL_Expression.placements.name.colorUnpacker=Color Unpacker (Expression to HSL Sliders)
+entities.Microlith57Misc/ColorUnpacker_HSL_Expression.attributes.description.expression=If present, only update the sliders when the expression is truthy.
+entities.Microlith57Misc/ColorUnpacker_HSL_Expression.attributes.description.packedColor=Expression yielding the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorUnpacker_HSL_Expression.attributes.description.unpackedColorPrefix=H, S, and L will be appended to this value to get the slider names for the three components of the color. Alpha is ignored.
+entities.Microlith57Misc/ColorUnpacker_HSL_Expression.attributes.description.angleFormat=Format to use for the hue component.
+
+# Color Packer
+entities.Microlith57Misc/ColorPacker_Float.placements.name.colorPacker=Color Unpacker (Sliders to Counter)
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.flag=If present, only update the counter when the flag is set.
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.packedColor=Counter containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.r=Slider for the red component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.g=Slider for the green component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.b=Slider for the blue component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.a=Slider for the premultiplied alpha component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.alpha=Slider for an additional alpha multiplier.\n\nIf you don't know what premultiplied alpha is, use this instead.
+
+entities.Microlith57Misc/ColorPacker_Float_Expression.placements.name.colorPacker=Color Unpacker (Float Expressions to Counter)
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.flag=If present, only update the counter when the flag is set.
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.packedColor=Expression containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.r=Expression for the red component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.g=Expression for the green component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.b=Expression for the blue component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.a=Expression for the premultiplied alpha component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_Float.attributes.description.alpha=Expression for an additional alpha multiplier.\n\nIf you don't know what premultiplied alpha is, use this instead.
+
+entities.Microlith57Misc/ColorPacker_Int.placements.name.colorPacker=Color Unpacker (Sliders to Counter)
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.flag=If present, only update the counter when the flag is set.
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.packedColor=Counter containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.r=Counter for the red component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.g=Counter for the green component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.b=Counter for the blue component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.a=Counter for the premultiplied alpha component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int.attributes.description.alpha=Slider for an additional alpha multiplier.\n\nIf you don't know what premultiplied alpha is, use this instead.
+
+entities.Microlith57Misc/ColorPacker_Int_Expression.placements.name.colorPacker=Color Unpacker (Float Expressions to Counter)
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.flag=If present, only update the counter when the flag is set.
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.packedColor=Expression containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.r=Expression for the red component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.g=Expression for the green component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.b=Expression for the blue component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.a=Expression for the premultiplied alpha component, in [0, 255].
+entities.Microlith57Misc/ColorPacker_Int_Expression.attributes.description.alpha=Expression for an additional alpha multiplier.\n\nIf you don't know what premultiplied alpha is, use this instead.
+
+entities.Microlith57Misc/ColorPacker_HSL.placements.name.colorPacker=Color Unpacker (HSL Sliders to Counter)
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.flag=If present, only update the counter when the flag is set.
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.packedColor=Counter containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.h=Slider for the hue component.
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.s=Slider for the saturation component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.l=Slider for the lightness component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.alpha=Expression for the alpha multiplier.
+entities.Microlith57Misc/ColorPacker_HSL.attributes.description.angleFormat=Format to use for the hue component.
+
+entities.Microlith57Misc/ColorPacker_HSL_Expression.placements.name.colorPacker=Color Unpacker (HSL Expressions to Counter)
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.flag=If present, only update the counter when the flag is set.
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.packedColor=Expression containing the packed color data to unpack.\n\nPacked color data is Color.PackedValue as an int.
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.h=Expression for the hue component.
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.s=Expression for the saturation component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.l=Expression for the lightness component, in [0, 1].
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.alpha=Expression for the alpha multiplier.
+entities.Microlith57Misc/ColorPacker_HSL_Expression.attributes.description.angleFormat=Format to use for the hue component.
 
 # Sound Source
 entities.Microlith57Misc/SliderSoundSource.placements.name.colorUnpacker=Sound Source (Slider)
